@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* Training and OCR in Torch now enabled in the CLI
 * translate\_back\_locations; tlstm now in rpred
 * Legacy clstm now integrated
 * added network.outputs for compatibility
